UDT-84 refactor: 리뷰 반영